Agregue parrafo y estilos de fondo-letra

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type= "text/css" href="./css/basic.css">
     <title>Hola Mundo</title>
 </head>
 <body>
     <h1>Hola a todos</h1>
-    <p>Este es un archivo de prueba</p>
+    <h2>Este es una página web de prueba</h2>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis officia repellendus voluptatem praesentium, perspiciatis atque 
+        exercitationem ea temporibus facere iure accusantium. Delectus ea soluta expedita dolor culpa necessitatibus quisquam debitis  
+    </p>
 
 </body>
 </html>
